[tool.poetry]
name = "pihello"
homepage = "https://github.com/pavelgar/Pi-hello"
version = "0.2.2"
description = "Highly configurable and scriptable Pi-hole statistics in text"
authors = ["pavelgar <pavel.garmuyev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
