[tool.poetry]
name = "pihello"
homepage = "https://github.com/pavelgar/Pi-hello"
repository = "https://github.com/pavelgar/Pi-hello"
keywords = ['command-line-tool', 'pi-hole', 'stats', 'pihello']
version = "0.3.0"
description = "Highly configurable and scriptable Pi-hole statistics in text"
authors = ["pavelgar <pavel.garmuyev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.8"

[tool.poetry.scripts]
pihello = 'pihello.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
